--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "uuid": "^8.3.2",
     "weather-icons": "git+https://github.com/erikflowers/weather-icons.git",
     "web-vitals": "^1.1.2"
   },
